# BoAP

LR1_/: CMakeLists.txt  Lang_comparison.ods  Scheme1.odg  Task_3  Task_3.cpp
LR2/LR2_Task1/: LR2_Task1.pro  dates.txt  filework.h
LR2/Task_1/: main  main.cpp
LR2/Task_10/: main  main.cpp
LR2/Task_11/: main  main.cpp
LR2/Task_13/: main  main.cpp
LR2/Task_2/: main  main.cpp
LR2/Task_3/: main  main.cpp
LR2/Task_4/: main  main.cpp
LR2/Task_7/: main  main.cpp
LR2/Task_8/: main  main.cpp
LR2/Task_9/: main  main.cpp
LR3_/: Scheme4.odg  Scheme5.odg
LR3_/Task_1/: main  main.cpp
LR3_/Task_2/: main  main.cpp
LR3_/Task_3/: main  main.cpp
LR3_/Task_4/: main  main.cpp
LR3_/Task_5/: main  main.cpp
LR3_/Task_6/: main  main.cpp
LR3_/Task_7/: main  main.cpp
LR3_/Task_8/: main  main.cpp
LR3_/test/: main
LR4/: s4.odg  s5.odg
LR4/Task_1/: CMakeLists.txt  main  main.cpp
LR4/Task_2/: CMakeLists.txt  main  main.cpp
LR4/Task_3/: CMakeLists.txt  main  main.cpp
LR4/TasksCpp/Task_4/: main.cpp
LR6/Task_1/: CMakeLists.txt  cinLong.cpp  cinText.cpp  findMaxLenWord.cpp  header1.h  init.cpp  main1.cpp
LR6/Task_1/gtest/: CMakeLists.txt  gtest1.cpp
LR6/Task_2/: CMakeLists.txt  coutText.cpp  createWords.cpp  findChain.cpp  header1.h  init.cpp  main1.cpp
LR6/Task_2/gtest/: CMakeLists.txt  gtest1.cpp
LR6/Task_2/kal/: secret_razrabotka  secret_razrabotka.cpp  wchart.cpp
LR6/Task_3/: CMakeLists.txt  coutText.cpp  decompose.cpp  header1.h  init.cpp  main1.cpp
LR7 for git/LR7 for git/Task_1/: CMakeLists.txt  cinN.cpp  coutN.cpp  inv.cpp  main.cpp  minus1.cpp
LR7 for git/LR7 for git/Task_3_1/: CMakeLists.txt  functions.cpp  header.h  main.cpp
LR7 for git/LR7 for git/Task_5/: CMakeLists.txt  main.cpp  makeDay1.cpp  makeDay2.cpp  null_arr.cpp  procAns.cpp  toBase3.cpp
LR7 for git/Task_1/: cinLong.cpp  cinN.cpp  coutN.cpp  header.h  inv.cpp  main.cpp  minus1.cpp
LR7 for git/Task_2_1/: functions.cpp  header.h  main.cpp
LR7 for git/Task_3_1/: functions.cpp  main.cpp
LR7 for git/Task_4/: CMakeLists.txt  check107.cpp  check23.cpp  check3.cpp  header.h  main.cpp
LR7 for git/Task_5/: header.h  main.cpp  makeDay1.cpp  makeDay2.cpp  null_arr.cpp  toBase3.cpp
QT-Animation/: Try.pro  Try.pro.user.eeb70ed  balloon.cpp  balloon.h  ellipse.cpp  ellipse.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT-Paint/: circle.cpp  circle.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  hex.cpp  hex.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mygraphicsscene.cpp  mygraphicsscene.h  npolygon.cpp  npolygon.h  nstar.cpp  nstar.h  rect.cpp  rect.h  rectangle.cpp  rectangle.h  romb.cpp  romb.h  square.cpp  square.h  star5.cpp  star5.h  star6.cpp  star6.h  star8.cpp  star8.h  triangle.cpp  triangle.h  untitled.pro
QT_LR2/LR2_Task1/: date.cpp  date.h  filework.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR2/LR2_Task2/: LR2_Task2.pro  askperswidget.cpp  askperswidget.h  askvacwidget.cpp  askvacwidget.h  filepers.cpp  filepers.h  filevac.cpp  filevac.h  filework.cpp  filework.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h  vacancy.cpp  vacancy.h
QT_LR2/LR2_Task3/: main.cpp
QT_LR3/LR3_Task1/: main.cpp
QT_LR3/LR3_Task2/: main.cpp
QT_LR3/LR3_Task3/: main.cpp
QT_LR3/LR3_Task4/: main.cpp
QT_LR3/LR3_Task5/: LR3_Task5.pro  filecalc.cpp  filecalc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR4/Task1/: Task1.pro  heap.cpp  heap.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sort.cpp  sort.h
QT_LR4/Task3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR4/Task4/: Task4.pro  iterator.h  mainwindow.cpp  mainwindow.h  vector.h
QT_LR4/Task5/: Task5.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  pair.h  vector.h
QT_LR5/Task_1/: aboba.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR5/Task_2/: Task_2.pro  iterator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mystring.cpp  mystring.h
QT_LR5/Task_3/: bitset.cpp  bitset.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR6/Task_1/: Plant.h  Task_1.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR6/Task_2/: main.cpp  ЛуканскийЛаб20_0.txt
QT_LR7/Task_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.cpp  queue.h
QT_LR7/Task_2/: AVLtree.h  Task_2.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR7/Task_3/: Deque.h  Hashtable.h  TaskHastTable.h  Task_3.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR7/Task_4/: HashTable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT_LR7/Task_5/: Deque.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lr7_git/Task_1/: CMakeLists.txt  change.cpp  cinLong.cpp  delete.cpp  fileLoad.cpp  fileSave.cpp  fileTrain.cpp  input.cpp  inputOne.cpp  main.cpp  outTrainToPlace.cpp  output.cpp  outputOne.cpp  search.cpp  showMenu.cpp  sortTrain.cpp
lr8_git/Task_1/: add.cpp  change.cpp  delete.cpp  fileSave.cpp  header.h  main.cpp  output.cpp  outputOne.cpp  search.cpp  sortTrain.cpp
lr8_git/Task_2/: CMakeLists.txt  add.cpp  change.cpp  cin.cpp  delete.cpp  fileSave.cpp  header.h  input.cpp  inputOne.cpp  main.cpp  output.cpp  outputOne.cpp  showMenu.cpp  studentbase.txt
(+45 files in other folders)
